src/lib/testcases/fails/basic/fn_bad_arg/main.rk
f :: Int64 -> Int64
f a = a

main = f 2.2
